--- a/amazon.html
+++ b/amazon.html
@@ -7,7 +7,7 @@
   <title>Amazon.com.Spend less.Smile more.</title>
   <link rel="stylesheet" href="amazon.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-  <link rel="icon" href="download.png">
+  <link rel="icon" href="/images/download.png">
 
 </head>
 
@@ -15,7 +15,7 @@
   <header>
     <div class="navbar">
       <div class="nav-logo border">
-        <img src="amazon-logo-black-background-xb9pdemosnjfz9ej.jpg" height="35" width="100">
+        <img src="/images/amazon-logo-black-background-xb9pdemosnjfz9ej.jpg" height="35" width="100">
       </div>
       <div class="nav-location border">
         <div class="location-icon">
@@ -34,7 +34,7 @@
         <button class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
       </div>
       <div class="nav-country border">
-        <img src="a978861693aaac38243ff356a00c0761e01ca6ba56d903c1fd4012c5a9906762.jpg" width="21" height="13">
+        <img src="/images/a978861693aaac38243ff356a00c0761e01ca6ba56d903c1fd4012c5a9906762.jpg" width="21" height="13">
         <p class="country"><b>EN</b></p>
       </div>
       <div class="nav-sign-in border">
@@ -77,16 +77,16 @@
       <div class="mini-section">
         <h2> Gaming accessories</h2>
         <div class="small-image">
-          <div class="box1"><img src="box1-1.jpg" width="140" height="116">
+          <div class="box1"><img src="/images/box1-1.jpg" width="140" height="116">
             <p>Headsets</p>
           </div>
-          <div class="box1"><img src="box1-2.jpg" width="140" height="116">
+          <div class="box1"><img src="/images/box1-2.jpg" width="140" height="116">
             <p>Keyboards</p>
           </div>
-          <div class="box1"><img src="box1-3.jpg" width="140" height="116">
+          <div class="box1"><img src="/images/box1-3.jpg" width="140" height="116">
             <p>Computer mice</p>
           </div>
-          <div class="box1"><img src="box1-4.jpg" width="140" height="116">
+          <div class="box1"><img src="/images/box1-4.jpg" width="140" height="116">
             <p>Chairs</p>
           </div>
         </div>
@@ -95,23 +95,23 @@
       <div class="mini-section">
         <h2>Get your game on</h2>
         <div class="small-image">
-          <div><img src="box2.jpg" width="295" height="303"></div>
+          <div><img src="/images/box2.jpg" width="295" height="303"></div>
         </div>
         <a href="#">Shop gaming</a>
       </div>
       <div class="mini-section">
         <h2> Shop for your home essentials</h2>
         <div class="small-image">
-          <div class="box3"><img src="box3-1.jpg" width="140" height="116">
+          <div class="box3"><img src="/images/box3-1.jpg" width="140" height="116">
             <p>Cleaning Tools</p>
           </div>
-          <div class="box3"><img src="box3-2.jpg" width="140" height="116">
+          <div class="box3"><img src="/images/box3-2.jpg" width="140" height="116">
             <p>Home Storage</p>
           </div>
-          <div class="box3"><img src="box3-3.jpg" width="140" height="116">
+          <div class="box3"><img src="/images/box3-3.jpg" width="140" height="116">
             <p>Home Decor</p>
           </div>
-          <div class="box3"><img src="box3-4.jpg" width="140" height="116">
+          <div class="box3"><img src="/images/box3-4.jpg" width="140" height="116">
             <p>Bedding</p>
           </div>
         </div>
@@ -120,23 +120,23 @@
       <div class="mini-section">
         <h2> New year, new supplies</h2>
         <div class="small-image">
-          <div><img src="box4.jpg" width="295" height="303"></div>
+          <div><img src="/images/box4.jpg" width="295" height="303"></div>
         </div>
         <a href="#">See more</a>
       </div>
       <div class="mini-section">
         <h2> Shop deals in Fashion</h2>
         <div class="small-image">
-          <div class="box5"><img src="box4-1.jpg" width="140" height="116">
+          <div class="box5"><img src="/images/box4-1.jpg" width="140" height="116">
             <p>Jeans under $50</p>
           </div>
-          <div class="box5"><img src="box4-2.jpg" width="140" height="116">
+          <div class="box5"><img src="/images/box4-2.jpg" width="140" height="116">
             <p>Tops under $25</p>
           </div>
-          <div class="box5"><img src="box4-3.jpg" width="140" height="116">
+          <div class="box5"><img src="/images/box4-3.jpg" width="140" height="116">
             <p>Dresses under $30</p>
           </div>
-          <div class="box5"><img src="box4-4.jpg" width="140" height="116">
+          <div class="box5"><img src="/images/box4-4.jpg" width="140" height="116">
             <p>Shops under $50</p>
           </div>
         </div>
@@ -145,17 +145,17 @@
       <div class="mini-section">
         <h2>Top categories in Kitchen appliances</h2>
         <div class="small-image">
-          <div class="box6-1"><img src="box5-1.jpg" width="295" height="145">
+          <div class="box6-1"><img src="/images/box5-1.jpg" width="295" height="145">
             <p>Cooker</p>
           </div>
           <div class="mini-box6">
-            <div class="box6-2"><img src="box5-2.jpg" width="95" height="75">
+            <div class="box6-2"><img src="/images/box5-2.jpg" width="95" height="75">
               <p>Coffee</p>
             </div>
-            <div class="box6-2"><img src="box5-3.jpg" width="95" height="75">
+            <div class="box6-2"><img src="/images/box5-3.jpg" width="95" height="75">
               <p>Pots and Pans</p>
             </div>
-            <div class="box6-2"><img src="box5-4.jpg" width="95" height="75">
+            <div class="box6-2"><img src="/images/box5-4.jpg" width="95" height="75">
               <p>Kettles</p>
             </div>
           </div>
@@ -165,16 +165,16 @@
       <div class="mini-section">
         <h2>New home arrivals under $50</h2>
         <div class="small-image">
-          <div class="box1-1"><img src="box7-1.jpg" width="140" height="116">
+          <div class="box1-1"><img src="/images/box7-1.jpg" width="140" height="116">
             <p>Kitchen & dining</p>
           </div>
-          <div class="box1-2"><img src="box7-2.jpg" width="140" height="116">
+          <div class="box1-2"><img src="/images/box7-2.jpg" width="140" height="116">
             <p>Home improvement</p>
           </div>
-          <div class="box1-3"><img src="box7=3.jpg" width="140" height="116">
+          <div class="box1-3"><img src="/images/box7=3.jpg" width="140" height="116">
             <p>Decor</p>
           </div>
-          <div class="box1-4"><img src="box7-4.jpg" width="140" height="116">
+          <div class="box1-4"><img src="/images/box7-4.jpg" width="140" height="116">
             <p>Bedding & Bath</p>
           </div>
         </div>
@@ -183,7 +183,7 @@
       <div class="mini-section">
         <h2> Shop Valentine's Day gifts</h2>
         <div class="small-image">
-          <div><img src="box8.jpg" width="295" height="303"></div>
+          <div><img src="/images/box8.jpg" width="295" height="303"></div>
         </div>
 
         <a href="#">Shop now</a>
